syntax = "proto3";

option java_multiple_files = true;
option java_package = "co.overlead.gRPC";
option java_outer_classname = "profile";
option objc_class_prefix = "pf";
package profile;

service Profile{
    rpc updateProfile(UpdateProfileReq) returns (ProfileRes){}
    rpc getProfile(GetProfileReq) returns ( ProfileRes){}
}
message GetProfileReq{
    string requesterId=1;
    string accessToken=2;
    string username=3;
}
message UpdateProfileReq{
    string userMail = 1;
    string img = 2;
    string name = 3;
    string address = 4;
    string birthday = 5;
    string email = 6;
    string fb = 7;
    string workplace = 8;
    string skill = 9;
    string accessToken = 10;
}

message ProfileRes{
    string status = 1;
    string avatar = 2;
    string point = 11;
    string name = 3;
    string address = 4;
    string birthday = 5;
    string email = 6;
    string fb = 7;
    string workplace = 8;
    string skill = 9;
    string accessToken = 10;
}
